# pal_homework

./: .gitignore
1_backup_con/: CMakeLists.txt
1_backup_con/datapub/: pub01.in  pub01.out  pub02.in  pub02.out  pub03.in  pub03.out  pub04.out  pub05.in  pub05.out  pub06.in  pub06.out  pub07.in  pub07.out  pub08.in  pub08.out  pub09.in  pub09.out  pub10.in  pub10.out  pub11.out  pub12.out
1_backup_con/src/: Edge.h  MyUnionFind.cpp  MyUnionFind.h  main.cpp
2_revers_edg/: CMakeLists.txt
2_revers_edg/datapub/: pub01.in  pub01.out  pub02.in  pub02.out  pub03.in  pub03.out  pub04.in  pub04.out  pub05.in  pub05.out  pub06.in  pub06.out  pub07.in  pub07.out  pub08.in  pub08.out  pub09.in  pub09.out
2_revers_edg/src/: NodeAdjList.h  SuccessorMatrix.cpp  SuccessorMatrix.h  bitset2d.h  main.cpp
3_tree_isom/: CMakeLists.txt
3_tree_isom/datapub/: pub01.in  pub02.in  pub03.in  pub04.in  pub05.in  pub05.out  pub06.in  pub06.out  pub07.in  pub07.out  pub08.in  pub08.out  pub09.in  pub09.out  pub10.in  pub10.out
3_tree_isom/src/: CertificateMatcher.cpp  CertificateMatcher.h  NodeWithNeighbors.h  TreeCertificate.h  main.cpp
4_generator/: CMakeLists.txt
4_generator/datapub/: pub04.out  pub05.out  pub06.out  pub07.out  pub08.out  pub09.out  pub10.out
4_generator/src/: CongruentialGenerator.cpp  CongruentialGenerator.h  FactorizationManager.cpp  FactorizationManager.h  SeedFinder.cpp  SeedFinder.h  main.cpp
5_automaton/: CMakeLists.txt
5_automaton/src/: IncompleteAutomaton.cpp  IncompleteAutomaton.h  InitialFinalStates.cpp  InitialFinalStates.h  main.cpp  main_optimized.cpp
6_txt_search/: CMakeLists.txt
6_txt_search/datapub/: pub01.in  pub02.in  pub02.out  pub03.in  pub03.out  pub04.in  pub04.out  pub05.in  pub05.out  pub06.in  pub06.out  pub07.in  pub07.out  pub08.in  pub08.out
6_txt_search/src/: PatternFinder.cpp  PatternFinder.h  main.cpp
exam/: CMakeLists.txt
exam/src/: NodeWithNeighbors.h  TreeCertificate.h  main.cpp
